--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     
   },
   
-  "author": "",
+  "author": "Vilas Hegde",
   "license": "ISC",
   "bugs": {
     "url": ""
   },
-  "homepage": "",
+  "homepage": "https://github.com/vilasrhegde/foodbudd",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -b master -d build"
     
   },
   "eslintConfig": {
