--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "food",
+  "name": "foodbudd",
+  "short_name":"Food",
   "version": "0.1.0",
   "private": true,
+
   
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
