--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "foodbudd",
-  "short_name":"Food",
+  "short_name": "Food",
   "version": "0.1.0",
   "private": true,
-
-  
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -13,10 +11,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
-
-    
   },
-  
   "author": "Vilas Hegde",
   "license": "ISC",
   "bugs": {
@@ -29,8 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-   "deploy": "gh-pages -b master -d build"
-    
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
